--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,18 @@ plugins {
 version = project.mod_version
 group = project.maven_group
 
+repositories {
+    maven { url "https://maven.shedaniel.me/" }
+    maven { url 'https://jitpack.io' }
+    maven { url = "https://maven.terraformersmc.com/releases/" }
+}
+
 dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+    modApi "com.github.AmyMialeeMods:no-enchant-cap:main-SNAPSHOT"
 }
 
 processResources {
