--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18
-yarn_mappings=1.18+build.1
-loader_version=0.12.8
+minecraft_version=1.18.1
+yarn_mappings=1.18.1+build.11
+loader_version=0.12.12
 # Mod Properties
-mod_version=1.18-1.0.0
+mod_version=1.18.1-fabric-1.0.0
 maven_group=amymialee
 archives_base_name=icy-incitement
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.43.1+1.18
+fabric_version=0.45.0+1.18
