--- a/src/main/resources/assets/icyincitement/models/item/snowball_sprinkler.json
+++ b/src/main/resources/assets/icyincitement/models/item/snowball_sprinkler.json
@@ -1,6 +1,35 @@
 {
 	"parent": "icyincitement:item/empty_sprinkler",
-	"textures": {
-		"layer0": "icyincitement:item/snowball_sprinkler"
-	}
+	"overrides": [
+		{
+			"predicate": {
+				"charge": 0
+			},
+			"model": "icyincitement:item/snowball_sprinkler_0"
+		},
+		{
+			"predicate": {
+				"charge": 0.10
+			},
+			"model": "icyincitement:item/snowball_sprinkler_1"
+		},
+		{
+			"predicate": {
+				"charge": 0.40
+			},
+			"model": "icyincitement:item/snowball_sprinkler_2"
+		},
+		{
+			"predicate": {
+				"charge": 0.75
+			},
+			"model": "icyincitement:item/snowball_sprinkler_3"
+		},
+		{
+			"predicate": {
+				"beta": 1
+			},
+			"model": "icyincitement:item/snowball_sprinkler_beta"
+		}
+	]
 }
