--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.2
-yarn_mappings=1.19.2+build.3
-loader_version=0.14.9
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.10
+loader_version=0.14.24
 # Mod Properties
-mod_version=1.1.4+1.19.x
+mod_version=1.2.0+1.20.1
 maven_group=amymialee
 archives_base_name=icy-incitement
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.59.0+1.19.2
+fabric_version=0.90.4+1.20.1
