--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,20 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx2G
-# Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.10
-loader_version=0.14.24
+org.gradle.jvmargs   = -Xmx2G
+org.gradle.parallel  = true
+
+# Fabric Properties on https://modmuss50.me/fabric.html
+minecraft_version    = 1.21.4
+yarn_mappings        = 1.21.4+build.1
+loader_version       = 0.16.9
+
 # Mod Properties
-mod_version=1.2.0+1.20.1
-maven_group=amymialee
-archives_base_name=icy-incitement
+mod_version          = 1.3.0
+maven_group          = xyz.amymialee
+archives_base_name   = icyincitement
+
 # Dependencies
-# check this on https://modmuss50.me/fabric.html
-fabric_version=0.90.4+1.20.1
+fabric_version       = 0.111.0+1.21.4
+mialib_version       = 1.2.16-1.21.4
+modmenu_version      = 13.0.0-beta.1
+cca_version          = 6.2.0
+pal_version          = 1.11.0
