--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 base {
-    archivesName = project.archives_base_name + "-" + project.minecraft_version
+    archivesName = project.mod_id + "-" + project.minecraft_version
 }
 
 version = project.mod_version + '-' + project.minecraft_version
@@ -41,11 +41,10 @@ fabricApi {
 }
 
 processResources {
-    inputs.property "version", project.version
-    filteringCharset "UTF-8"
-    filesMatching("fabric.mod.json") {
-        expand "version": project.version
-    }
+    final Map<String, String> data = [mod_id : mod_id, version : version]
+    inputs.properties(data)
+    filesMatching("*.mod.json") {expand(data)}
+    filesMatching("META-INF/*mods.toml") {expand(data)}
 }
 
 tasks.withType(JavaCompile).configureEach {
@@ -56,7 +55,7 @@ tasks.withType(JavaCompile).configureEach {
 java {
     sourceCompatibility = JavaVersion.VERSION_21
     targetCompatibility = JavaVersion.VERSION_21
-    archivesBaseName = project.archives_base_name
+    archivesBaseName = project.mod_id
     withSourcesJar()
 }
 
