--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ loader_version       = 0.16.9
 # Mod Properties
 mod_version          = 1.3.0
 maven_group          = xyz.amymialee
-archives_base_name   = icyincitement
+mod_id               = icyincitement
 
 # Dependencies
 fabric_version       = 0.111.0+1.21.4
