--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs   = -Xmx2G
 org.gradle.parallel  = true
 
 # Fabric Properties on https://modmuss50.me/fabric.html
-minecraft_version    = 1.21.4
-yarn_mappings        = 1.21.4+build.1
-loader_version       = 0.16.9
+minecraft_version    = 1.21.11
+yarn_mappings        = 1.21.11+build.3
+loader_version       = 0.18.3
 
 # Mod Properties
 mod_version          = 1.3.0
@@ -13,8 +13,7 @@ maven_group          = xyz.amymialee
 mod_id               = icyincitement
 
 # Dependencies
-fabric_version       = 0.111.0+1.21.4
-mialib_version       = 1.2.16-1.21.4
-modmenu_version      = 13.0.0-beta.1
-cca_version          = 6.2.0
-pal_version          = 1.11.0
+fabric_version       = 0.140.2+1.21.11
+mialib_version       = 1.2.38-1.21.11
+modmenu_version      = 17.0.0-alpha.1
+cca_version          = 7.3.0
