--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -5,7 +5,7 @@ loaderVersion = "[4,)"
 modId = "icyincitement"
 version = "${version}"
 displayName = "Icy Incitement"
-description = "A convenient chilly gadget!"
+description = "Some useful snowy tools!"
 
 [properties]
 "connector:placeholder" = true
