--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,11 @@
 plugins {
-    id 'fabric-loom' version '1.14-SNAPSHOT'
+    id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
     id "maven-publish"
 }
 
-base {
-    archivesName = project.mod_id + "-" + project.minecraft_version
-}
-
-version = project.mod_version + '-' + project.minecraft_version
+version = project.mod_version
 group = project.maven_group
+base { archivesName = project.mod_id + "-" + project.minecraft_version }
 
 repositories {
     maven { url "https://maven.willbl.dev/releases" }
@@ -16,9 +13,15 @@ repositories {
     maven { url "https://maven.terraformersmc.com/releases/" }
 }
 
+fabricApi { configureDataGeneration {
+    modId = "icyincitement"
+    client = true
+    addToResources = true
+}}
+
 dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+    mappings loom.officialMojangMappings()
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
@@ -29,17 +32,6 @@ dependencies {
     modImplementation include ("org.ladysnake.cardinal-components-api:cardinal-components-scoreboard:${project.cca_version}")
 }
 
-loom {
-    accessWidenerPath = file("src/main/resources/icyincitement.accesswidener")
-}
-
-fabricApi {
-    configureDataGeneration() {
-        modId = "icyincitement"
-        client = true
-    }
-}
-
 processResources {
     final Map<String, String> data = [mod_id : mod_id, version : version]
     inputs.properties(data)
@@ -47,37 +39,25 @@ processResources {
     filesMatching("META-INF/*mods.toml") {expand(data)}
 }
 
-tasks.withType(JavaCompile).configureEach {
-    it.options.encoding = 'UTF-8'
-    it.options.release = 21
-}
+tasks.withType(JavaCompile).configureEach { it.options.release = 21 }
 
 java {
+    withSourcesJar()
     sourceCompatibility = JavaVersion.VERSION_21
     targetCompatibility = JavaVersion.VERSION_21
-    withSourcesJar()
 }
 
 jar {
-    from("LICENSE.md") {
-        rename { "${it}_${base.archivesName.get()}"}
-    }
+    inputs.property "archivesName", project.base.archivesName
+    from("LICENSE.md") { rename { "${it}_${inputs.properties.archivesName}"} }
 }
 
 publishing {
-    publications { //noinspection GroovyAssignabilityCheck
-        mavenJava(MavenPublication) { //noinspection GroovyAssignabilityCheck
-            from components.java
-        }
-    }
-    repositories {
-        maven {
-            name = "willBlRepositoryReleases"
-            url = "https://maven.willbl.dev/releases"
-            credentials(PasswordCredentials)
-            authentication { //noinspection GroovyAssignabilityCheck
-                basic(BasicAuthentication)
-            }
-        }
-    }
+    publications { mavenJava(MavenPublication) { from components.java } }
+    repositories { maven {
+        name = "willBlRepositoryReleases"
+        url = "https://maven.willbl.dev/releases"
+        credentials(PasswordCredentials)
+        authentication { basic(BasicAuthentication) }
+    }}
 }
