--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,19 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs   = -Xmx2G
-org.gradle.parallel  = true
+org.gradle.jvmargs=-Xmx2G
+org.gradle.parallel=true
+org.gradle.configuration-cache=false
 
 # Fabric Properties on https://modmuss50.me/fabric.html
-minecraft_version    = 1.21.11
-yarn_mappings        = 1.21.11+build.3
-loader_version       = 0.18.3
+minecraft_version=1.21.11
+loader_version=0.18.3
+loom_version=1.14-SNAPSHOT
 
 # Mod Properties
-mod_version          = 1.3.0
-maven_group          = xyz.amymialee
-mod_id               = icyincitement
+mod_version=1.3.0
+maven_group=dev.amymialee
+mod_id=icyincitement
 
 # Dependencies
-fabric_version       = 0.140.2+1.21.11
-mialib_version       = 1.2.38-1.21.11
-modmenu_version      = 17.0.0-alpha.1
-cca_version          = 7.3.0
+fabric_version=0.140.2+1.21.11
+mialib_version=1.2.38-1.21.11
+modmenu_version=17.0.0-beta.1
+cca_version=7.3.0
